<resources>
    <string name="app_name">DailyMenu</string>
    <string name="up">Up</string>
    <string name="find_restaurant">Find restaurant</string>
    <string name="detail_restaurant">Restaurant detail</string>
    <string name="saved_menu">Saved menu</string>
    <string name="daily_menu">Daily menu</string>
    <string name="fav_restaurant">Favorite restaurant</string>
    <string name="save_menu">save menu</string>
    <string name="add_restaurant_to_favourite">Add restaurantDB to favourite</string>
    <string name="review">User rating</string>
    <string name="address">Address</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="API_KEY">AIzaSyCVlTNxabjH7L34ZJq8A9jVHODfdtDuqzQ</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="rating_text">Rating: \nRating text: \nVotes:</string>
    <string name="alarm">ALARM</string>
    <string name="new_menu_notification">New menu for today</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="saved">Saved</string>
    <string name="location">LOCATION</string>
    <string name="daily_menu">Daily menu</string>


</resources>
