<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_container_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/main_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_menu"
                style="@style/Title" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_buttons_layout"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">


            <TextView

                android:id="@+id/menu_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/TextViewMenu"
                android:layout_below="@id/toolbar">

            </TextView>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/menu_layout"
            android:paddingStart="10dp"
            android:paddingTop="10dp">


            <Button
                android:id="@+id/save_menu_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/save_menu"
                android:textColor="@color/white"
                android:visibility="visible"/>

            <Button
                android:id="@+id/save_menu_button_done"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/save_menu"
                android:textColor="@color/white"
                android:visibility="gone"/>

            <Button
                android:id="@+id/save_restaurant_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/add_restaurant_to_favourite"
                android:textColor="@color/white"
                android:visibility="visible"/>


            <Button
                android:id="@+id/remove_restaurant_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/remove_from_favorite"
                android:textColor="@color/white"
                android:visibility="gone"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_review_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_container"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/review_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                style="@style/Title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/review_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_review_container"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/rating_titles"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                style="@style/TextView"
                android:textColor="@color/black"
                android:maxLines="3"
                android:minLines="1"
                android:text="@string/rating_text"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/TextView"
                android:maxLines="3"
                android:minLines="1"
                android:text="data">



            </TextView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_address_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/review_recycler"
            android:orientation="vertical"
            android:paddingTop="10dp"
            >

            <TextView
                android:id="@+id/address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                style="@style/Title" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/address"
                style="@style/TextViewMenu"
                android:text="tototototototoot"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/linear_address_container"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            >


            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.mapwithmarker.MapsMarkerActivity" />


        </RelativeLayout>


    </RelativeLayout>

</ScrollView>
